# c3_servo

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: lib.rs
src/servos/: config.rs  config_codec.rs  controller.rs  engine.rs  error.rs  hal.rs  mod.rs  profile.rs
src/servos/orchestrator/: mod.rs  sequence.rs
